--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,23 @@
 language: python
-python: 2.7
+python:
+ - 2.6
+ - 2.7
+env:
+ - BEFORE_DJANGO_VERSION=1.5 TASTYPIE_VERSION="==0.9.12"
+ - BEFORE_DJANGO_VERSION=1.5 TASTYPIE_VERSION=">=0.9.12,<=0.10.0"
+ - BEFORE_DJANGO_VERSION=1.6 TASTYPIE_VERSION="==0.9.12"
+ - BEFORE_DJANGO_VERSION=1.6 TASTYPIE_VERSION=">=0.9.12,<=0.10.0"
+ - BEFORE_DJANGO_VERSION=1.7 TASTYPIE_VERSION="==0.9.12"
+ - BEFORE_DJANGO_VERSION=1.7 TASTYPIE_VERSION=">=0.9.12,<=0.10.0"
 services: mongodb
-install: "python setup.py install"
-script: "python -Wall setup.py test"
+install:
+ - pip install "Django<$BEFORE_DJANGO_VERSION"
+ - pip install "django-tastypie$TASTYPIE_VERSION"
+ - pip install pep8 --use-mirrors
+ - pip install pylint --use-mirrors
+ - python setup.py install
+before_script:
+ - pep8 django_datastream tests docs
+ - pylint django_datastream tests docs || true
+script:
+ - python -Wall setup.py test
