--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ python:
  - 2.7
 env:
  - BEFORE_DJANGO_VERSION=1.5 TASTYPIE_VERSION="==0.9.16"
- - BEFORE_DJANGO_VERSION=1.5 TASTYPIE_VERSION=">=0.9.16,<=0.10.0"
+ - BEFORE_DJANGO_VERSION=1.5 TASTYPIE_VERSION=">=0.9.16"
  - BEFORE_DJANGO_VERSION=1.6 TASTYPIE_VERSION="==0.9.16"
- - BEFORE_DJANGO_VERSION=1.6 TASTYPIE_VERSION=">=0.9.16,<=0.10.0"
+ - BEFORE_DJANGO_VERSION=1.6 TASTYPIE_VERSION=">=0.9.16"
  - BEFORE_DJANGO_VERSION=1.7 TASTYPIE_VERSION="==0.9.16"
- - BEFORE_DJANGO_VERSION=1.7 TASTYPIE_VERSION=">=0.9.16,<=0.10.0"
+ - BEFORE_DJANGO_VERSION=1.7 TASTYPIE_VERSION=">=0.9.16"
 services: mongodb
 install:
  - pip install "Django<$BEFORE_DJANGO_VERSION"
