--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
- - 2.6
  - 2.7
 env:
  - BEFORE_DJANGO_VERSION=1.5 TASTYPIE_VERSION="==0.9.16"
@@ -9,12 +8,14 @@ env:
  - BEFORE_DJANGO_VERSION=1.6 TASTYPIE_VERSION=">=0.9.16"
  - BEFORE_DJANGO_VERSION=1.7 TASTYPIE_VERSION="==0.9.16"
  - BEFORE_DJANGO_VERSION=1.7 TASTYPIE_VERSION=">=0.9.16"
+ - BEFORE_DJANGO_VERSION=1.8 TASTYPIE_VERSION="==0.9.16"
+ - BEFORE_DJANGO_VERSION=1.8 TASTYPIE_VERSION=">=0.9.16"
 services: mongodb
 install:
  - pip install "Django<$BEFORE_DJANGO_VERSION"
  - pip install "django-tastypie$TASTYPIE_VERSION"
- - pip install pep8 --use-mirrors
- - pip install pylint --use-mirrors
+ - pip install pep8
+ - pip install pylint
  - python setup.py install
 before_script:
  - pep8 django_datastream tests docs
