--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: python
 python:
  - 2.7
 env:
- - BEFORE_DJANGO_VERSION=1.5 TASTYPIE_VERSION="==0.9.16"
- - BEFORE_DJANGO_VERSION=1.5 TASTYPIE_VERSION=">=0.9.16"
  - BEFORE_DJANGO_VERSION=1.6 TASTYPIE_VERSION="==0.9.16"
  - BEFORE_DJANGO_VERSION=1.6 TASTYPIE_VERSION=">=0.9.16"
  - BEFORE_DJANGO_VERSION=1.7 TASTYPIE_VERSION="==0.9.16"
@@ -19,6 +17,6 @@ install:
  - python setup.py install
 before_script:
  - pep8 django_datastream tests docs
- - pylint django_datastream tests docs || true
+ - pylint django_datastream tests || true
 script:
  - python -Wall setup.py test
